--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,9 @@
+/*css para el app*/
 .App {
   font-family: sans-serif;
   text-align: center;
 }
-
+/*css para la barra de busqueda*/
 .search-bar {
   text-align: center; /* Centra el contenido horizontalmente */
   margin-top: 50px; /* Agrega margen superior para separar de la parte superior */
@@ -22,12 +23,22 @@
   cursor: pointer;
 }
 
+/*css para las categorias*/
+.category{
+  color: #007bff;
+}
 /* Estilo para alinear la lista de elementos a la izquierda */
 .item-list {
   text-align: left;
+  list-style-type: none; /* Elimina los puntos de la lista */
+  padding: 5px 5px;
+  width: 115px;
 }
 
 /* Estilo para los elementos individuales en la lista */
 .item-list li {
   margin-left: 0; /* Elimina cualquier margen izquierdo predeterminado */
+  border-color:#007bff;
+  border-style:ridge;
+  border-radius: 7px;
 }
