--- a/src/styles.css
+++ b/src/styles.css
@@ -100,3 +100,17 @@ max-width: 65%;
 .juego-card p{
   font-size: 30px;
 }
+/*css para las subcategorias*/
+.subcategorias {
+  list-style-type: none;
+  padding-left: 5px;
+  margin-top: 5px;
+}
+
+.subcategorias li {
+  cursor: pointer;
+}
+
+.subcategorias li:hover {
+  color: #033469; /* Cambia el color al pasar el ratón por encima */
+}
