--- a/src/styles.css
+++ b/src/styles.css
@@ -42,10 +42,18 @@ body {
 }
 
 /*css para las categorias*/
+.category-conteiner{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+}
 .categorias{
-  color: #007bff;
+  color: #fafafa;
   text-align: left;
   min-width: 50%;
+  margin-top: 50px;
 }
 .categorias h2{
   color: white;
@@ -56,43 +64,50 @@ body {
   list-style-type: none; /* Elimina los puntos de la lista */
   padding: 5px 5px;
   width: 115px;
+  margin: 0;
+  color: white;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
 /* Estilo para los elementos individuales en la lista */
 .item-list li {
   margin-left: 0; /* Elimina cualquier margen izquierdo predeterminado */
-  border-color:#007bff;
-  border-style:ridge;
-  border-radius: 7px;
-  background-color: white;
-}
+  border-color:#FF0000;
+  border-style: double;   /*double*/
+  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0);
+  padding: 3px;
+  margin-bottom: 10px;
+  cursor: pointer;
+  }
 /*css para los Juegos*/
 .juegos{
-text-align: center;
-padding: 10px;
-width: 40%;
+  color: #fafafa;
+  text-align: center;
+  min-width: 50%;
 }
-.juegos-container {
-display: flex;
-justify-content: space-around;
-align-items: flex-start;
-max-width: 65%;
+.juegos h2{
+  color: rgba(217, 255, 0, 0.884)
 }
+
 .juego-list{
-  border-radius: 10px;
-  border-style: none;
-  padding: 10px;
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 .juego-card{
   text-align: center;
   min-width: 325px;
-  
+  max-width: 325px;
+  margin: 10px;
+  padding: 10px;
+  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.2);
 }
 .juego-card img{
-  width: 300px;
-  height: auto;
+  width: 310px;
+  height: 310px;
 }
 .juego-card p{
   font-size: 30px;
@@ -109,5 +124,5 @@ max-width: 65%;
 }
 
 .subcategorias li:hover {
-  color: #033469; /* Cambia el color al pasar el ratón por encima */
-}
+  color: rgb(138, 14, 14); /* Cambia el color al pasar el ratón por encima */
+} 
