--- a/src/styles.css
+++ b/src/styles.css
@@ -462,6 +462,7 @@ body {
   padding: 5px;
   margin-right: 10px;
   width: 325px; /* Ajusta el ancho según tus preferencias */
+  border-radius: 10px;
 }
 
 .search-bar button {
