--- a/src/styles.css
+++ b/src/styles.css
@@ -291,6 +291,7 @@
     height: 220px;
     overflow: hidden;
     padding: 15px;
+    border-radius: 15px;
 }
 
 .card1 span:nth-child(1) 
@@ -392,13 +393,18 @@
 }
 /*css para el app*/
 .App {
-  font-family: sans-serif;
   text-align: center;
   }
-
-.App-logo {
-  height: 42px;
+  .App .gradient-text{
+    font-size: 80px;
+    color: red;
+    font-family: 'Courier New', Courier, monospace;
   }
+.video-clase {
+  width: 320px; /* ajusta según tus necesidades */
+  height: 240px; /* ajusta según tus necesidades */
+}
+
 
 .App-header {
   background-color: #282c34;
@@ -429,11 +435,9 @@
 }
 .login{
   position:fixed;
-  top: 45%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 30px;
-  padding: 40px;
 }
 
 
@@ -456,21 +460,15 @@ body {
 .search-bar {
   text-align: center; /* Centra el contenido horizontalmente */
   margin-top: 50px; /* Agrega margen superior para separar de la parte superior */
+  margin-bottom: 50px;
 }
 
 .search-bar input {
   padding: 5px;
   margin-right: 10px;
-  width: 325px; /* Ajusta el ancho según tus preferencias */
+  width: 400px; /* Ajusta el ancho según tus preferencias */
+  height: 30px;
   border-radius: 10px;
-}
-
-.search-bar button {
-  padding: 5px 10px;
-  background-color: #007bff; /* Color de fondo del botón */
-  color: white; /* Color del texto del botón */
-  border: none;
-  cursor: pointer;
 }
 
 /*css para las categorias*/
@@ -515,12 +513,13 @@ body {
   }
 /*css para los Juegos*/
 .juegos{
-  color: #fafafa;
+  color: red;
   text-align: center;
   min-width: 50%;
 }
 .juegos h2{
-  color: rgba(217, 255, 0, 0.884)
+  color: red;
+  font-size: 50px;
 }
 
 .juego-list{
